# eventhorizon

./: .gitignore  CMakeLists.txt  common.pri  horizon.pro
content/config/: plugins_d.cfg.in  resources.cfg.in  resources_d.cfg.in
content/materials/: RZR-002.material  razor.material
docs/: building.txt  gamedesign.txt  todo.txt
extra/cmake/: FindOGRE.cmake
game/: ogre.cfg  plugins.cfg  quakemap.cfg  resources_d.cfg  samples.cfg
include/: coredefs.h  eventhorizonclientapp.h  horizon.h  position.h  shipentity.h
projects/client/: client.pro
projects/client/include/client/: model.h
projects/client/src/: horizonclient.cpp  model.cpp
projects/engine/: engine.pro
projects/engine/include/engine/: gameentity.h  physicsinfo.h  shipentity.h
projects/engine/src/: gameentity.cpp  shipentity.cpp
scripts/: buildrun.sh  clean.sh
src/: CMakeLists.txt  eventhorizon.cpp  eventhorizonclientapp.cpp  gameentity.cpp  horizon.cpp  model.cpp  shipentity.cpp
tests/: CMakeLists.txt  test_alwaystrue.cpp  testrunner.cpp
